Fixes performance warnings.
git-svn-id: svn://svn.code.sf.net/p/fmj/code/fmj@72 799b4810-d841-4bb4-a54b-9156a0c3e4cd